testdata/bad/timeDecimalHoursZulu.ion
// Minutes, seconds missing
1969-02-23T00.00Z
